# Booking.com-automation

./: .gitignore  .gitlab-ci.yml  pyproject.toml
allure-reports/: 02a0a500-ca3c-46e7-a9b6-fa1ebdbc7f3a-result.json  02ab9f3a-9288-48a9-a50c-0aab297600f6-container.json  03b09f96-8df1-4360-b33f-a18b01a5a006-container.json  04309fb6-6cbf-4aa3-ad91-f0b24477dbe5-result.json  0477895d-9904-43f0-a378-00ee7bd510ad-result.json  05bf069e-2eae-42e1-be9a-acb346c5b5ce-result.json  0af4c423-5a4d-4253-a9be-5fed29274c06-container.json  0be9d358-d6ab-437e-835c-f95c72a6ff17-container.json  0d391e2c-d466-4137-8bde-d8ec862308cd-container.json  11f4d235-5e7c-4a0d-96dd-882c197099f2-result.json  1290c08c-4bc0-4237-a542-4c34aea35bd1-result.json  15c655e1-c42a-4fcb-9e40-8de31d437d1b-container.json  16d969fd-ff52-401c-93f0-8e63b44fb9d7-container.json  1a4c00df-6291-4813-82d0-0945e983cc33-container.json  1b98c49c-c229-468e-8765-6378fd11728e-container.json  1f275ec0-0873-4355-b4bb-3db832d93bc6-container.json  1fdf5112-c177-4422-bf75-a0c83d981a4e-container.json  21ce329a-08e3-4349-8460-0f6bd8280353-container.json  23e22212-1dba-4bbb-b2e5-8afa81d292ce-container.json  24a281ff-ed1f-4272-8a50-aea9e853fa14-container.json  2a4585dd-e542-4231-ac56-991d915fd307-container.json  2c1e4c9d-b179-4b4d-acf0-b84f9a5f8146-container.json  2d83d74b-d50c-42a9-b197-3a061e4e71e2-result.json  2e1f7c8d-795f-447d-91e4-96ff7b8d1ee1-container.json  2e975cee-3fc5-4823-8ccf-e72b4f9fd10b-container.json  320be8c3-ee7e-4be2-85d8-6ccbddb5aea1-result.json  35732786-efbe-4d54-aa2f-abe5b8ab02d1-container.json  (+123 more)
tests/: conftest.py  (+11 more)
(+426 files in other folders)
